fixed a couple recs regarding text-align and spacing

--- a/css/impact.css
+++ b/css/impact.css
@@ -80,6 +80,7 @@ img {
 .tech-around-info,
 .responsible-info {
 	margin: 60px auto;
+	text-align: center;
 }
 
 
@@ -186,8 +187,6 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 		line-height: var(--line-height58);
 	}
 
-	
-
 	/* icon section */
 	.icons-parent {
 		flex-direction: row;
@@ -205,7 +204,9 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 /* Desktop Only */
 @media screen and (min-width: 1024px) {
 	/* Add styles that apply specifically to desktop */
-  
+  .responsible-wrapper {
+	max-width: 85%;
+  }
 	/* top and bottom section */
 	.h4-styles {
 		font-size: var(--font46);
@@ -243,6 +244,10 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 		max-width: 500px;
 		margin: 0 auto;
 	}
+	.tech-around-info,
+.responsible-info {
+	text-align: left;
+}
 	/* tech around section */
 	/* red block */
 	.tech-img.style-left::before {
